fixed bug with navbar where it covers every button

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -3,8 +3,8 @@
     top: 0;
     left: 0;
     color: white;
-    width: 100%;
-    height: 100vh;
+    /* width: 100%;
+    height: 100vh; */
     z-index: 2;
     display: flex;
     flex-direction: column;
@@ -23,6 +23,7 @@
     width: 100%;
     height: 100vh;
     display: flex;
+    z-index: -2;
 }
 
 #navBtns {
